fix: fixes wrong margins on larger breakpoints

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -188,7 +188,6 @@ a {
 
     padding-left: 0;
     list-style: none;
-    margin-top: 0;
 }
 
 .main-nav__list > li {
@@ -250,8 +249,8 @@ a {
     transition: 0.5s ease-in-out;
 }
 
-#full-width {
-    padding-bottom: 3rem;
+.full-height {
+    min-height: calc(100vh - var(--header-height));
 }
 
 @media screen and (max-width: 1480px) {
@@ -277,6 +276,8 @@ a {
 
     .main-nav__list {
         gap: 0;
+
+        margin-top: 0;
     }
 
     .main-nav__list > li {
